  Affects =vino-producer-select=, =vino-producer-find-file= and
  =vino-entry-create=.
- [[https://github.com/d12frosted/vino/pull/86][vino#86]] Align behaviour of =vino-grape-select= with =vino-producer-select=, so
  the user is prompted to create a note when selecting a non-existent grape
  note.

** v0.1
:PROPERTIES:
:ID:                     81aaf405-b49b-4b96-811d-fb6989e6a26f
:END:

Initial release of =vino= application. The main goal of this release is to
achieve feature parity with [[https://github.com/d12frosted/environment/blob/3d387cb95353cfe79826d24abbfd1b6091669957/emacs/lisp/%2Borg-wine.el][+org-wine.el]]. See [[README.org][README]] for more information.

*Features*

- Functionality to create and find producers:
  - =vino-producer-create= - create a new =producer= note according to
    =vino-producer-template=.
  - =vino-producer-find-file= - select and visit =producer= note.
- Functionality to create and find grapes:
  - =vino-grape-create= - create a new =grape= note according to
    =vino-grape-template=.
  - =vino-grape-find-file= - select and visit =grape= note.
- Functionality to create and find regions and appellations:
  - =vino-region-create= - create a new =region= note according to
    =vino-region-template=.
  - =vino-appellation-create= - create a new =appellation= note according to
    =vino-appellation-template=.
  - =vino-region-find-file= - select and visit =region= or =appellation= note.
- Functionality to create and maintain cellar entries:
  - =vino-entry-create= - create a new =vino-entry= according to
    =vino-entry-template=. It interactively reads carbonation type, colour type,
    sweetness level, producer, name, vintage, appellation or region, grapes,
    alcohol level, sugar, resources and price. Producer, appellation, region and
    grapes are linked using =org-roam=.
  - =vino-entry-find-file= - select and visit =vino-entry=.
  - =vino-entry-update= - update visiting (or selected) =vino-entry=. It