@@ -27,6 +27,9 @@ Primarily a stabilization and bug-fix release.
 - [[https://github.com/d12frosted/vino/pull/86][vino#86]] Align behaviour of =vino-grape-select= with =vino-producer-select=, so
   the user is prompted to create a note when selecting a non-existent grape
   note.
+- [[https://github.com/d12frosted/vino/pull/86][vino#86]] Allow to create region or appellation note when selecting non-existent
+  region or appellation. Affects =vino-region-select=, =vino-region-find-file=
+  and =vino-entry-create=.
 
 ** v0.1
 :PROPERTIES:
